--- a/package.json
+++ b/package.json
@@ -56,8 +56,11 @@
   },
   "dependencies": {
     "@adonisjs/core": "^5.9.0",
+    "@adonisjs/lucid": "^18.4.2",
     "@adonisjs/repl": "^3.1.11",
     "adonis5-swagger": "^1.4.1",
+    "luxon": "^3.4.4",
+    "mysql2": "^3.10.2",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21"
