Teste unitário e testes funcionais

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
+PORT=3333
+HOST=0.0.0.0
+NODE_ENV=development
+APP_KEY=appkeycampanha-test
+DRIVE_DISK=local
 DB_CONNECTION=mysql
 MYSQL_HOST=127.0.0.1
 MYSQL_PORT=3306
-MYSQL_USER=lucid
-MYSQL_PASSWORD=
-MYSQL_DB_NAME=lucid
+MYSQL_USER=user_campanhas
+MYSQL_PASSWORD=user_campanhas_pass
+MYSQL_DB_NAME=db_campanhas
