--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "pino-pretty": "^10.2.3",
     "prettier": "^3.0.3",
+    "sinon": "^18.0.0",
     "typescript": "~4.6",
     "youch": "^3.3.3",
     "youch-terminal": "^2.2.3"
